# resume

./: .gitignore  Makefile  README.md  example.resume.toml  generator.py  latex_reserve.py  live_edit.py  pyproject.toml  resume.toml.example
toml_resume/: cli.py  generator.py  latex_reserve.py
